Lodash isEqual. actionDefinition. Publishing fix

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
@@ -334,7 +334,7 @@
     </button>
 
     <button
-      *ngIf="item.tickActionDefinition && !isReadonly"
+      *ngIf="item.actionDefinition && !isReadonly"
       nbButton
       size="small"
       status="danger"
