--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
@@ -79,7 +79,7 @@
                 status="success"
                 *ngIf="answer.done"
               ></nb-icon>
-              {{ answer.data.tickActionDefinition.answer }}
+              {{ answer.data.actionDefinition.answer }}
             </div>
           </div>
         </div>
