--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -174,3 +174,9 @@ nb-dialog-container {
     max-width: 40vw;
   }
 }
+
+.full-width-dialog {
+  nb-dialog-container {
+    min-width: 95vw;
+  }
+}
