--- a/bot/admin/web/src/app/faq/faq-management/faq-management-filters/faq-management-filters.component.html
+++ b/bot/admin/web/src/app/faq/faq-management/faq-management-filters/faq-management-filters.component.html
@@ -1,5 +1,5 @@
 <nb-card class="mb-0">
-  <nb-card-header class="d-flex align-items-center justify-content-between">
+  <nb-card-header class="d-flex justify-content-between gap-1">
     Filters
     <button
       *ngIf="isFiltered"
