✨(story): add information message when perform action on tick story

--- a/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
+++ b/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
@@ -27,6 +27,7 @@
       *ngFor="let actionDef of actions"
       nbButton
       size="small"
+      [ghost]="actionDef.ghost"
       [status]="actionDef.buttonStatus"
       (click)="dialogRef.close(actionDef.actionName.toLowerCase())"
     >
