✨(scenario-designer): inclusion of all designer steps in the full screen mode

--- a/bot/admin/web/src/app/scenarios/scenario-designer/contexts-graph/contexts-graph.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/contexts-graph/contexts-graph.component.html
@@ -22,10 +22,11 @@
       *ngIf="!noGraphInScenario"
       #canvasWrapperElem
       id="canvas-wrapper"
-      canvas
+      tock-canvas
       [maxScale]="5"
       [centerCanvasY]="true"
       [position]="canvasPosition"
+      [hideActions]="[canvaAction.fullscreen]"
     >
       <div id="canvas">
         <div class="htmlGraph">
