--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
@@ -192,6 +192,7 @@
           fullWidth
           id="handler"
           type="text"
+          tock-delay
           placeholder="Enter handler class name"
           autocomplete="off"
           [nbAutocomplete]="handlersAutocomplete"
