--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
@@ -1,8 +1,10 @@
 <div
   class="canvas-wrapper"
   #canvasWrapperElem
-  canvas
+  tock-canvas
   [position]="elementPosition"
+  [isFullscreen]="isFullscreen"
+  (onFullscreen)="toggleFullscreen($event)"
   appMouseWheelListner
 >
   <div
