--- a/bot/admin/web/src/app/shared/canvas/bottom-actions/bottom-actions.component.html
+++ b/bot/admin/web/src/app/shared/canvas/bottom-actions/bottom-actions.component.html
@@ -4,6 +4,15 @@
 >
   <button
     nbButton
+    [class.d-none]="hideActions.includes(action.resetPosition)"
+    nbTooltip="Reset the position"
+    (click)="resetPosition()"
+  >
+    <nb-icon icon="pin-outline"></nb-icon>
+  </button>
+  <button
+    nbButton
+    [class.d-none]="hideActions.includes(action.fullscreen)"
     [nbTooltip]="isFullscreen ? 'Leave fullscreen' : 'Fullscreen'"
     (click)="fullscreen(!isFullscreen)"
   >
@@ -11,6 +20,7 @@
   </button>
   <button
     nbButton
+    [class.d-none]="hideActions.includes(action.zoomOut)"
     nbTooltip="Zoom out"
     (click)="zoom(zoomValue.OUT)"
   >
@@ -18,6 +28,7 @@
   </button>
   <button
     nbButton
+    [class.d-none]="hideActions.includes(action.zoomIn)"
     nbTooltip="Zoom in"
     (click)="zoom(zoomValue.IN)"
   >
