✨(scenarios-list): enable / disable a tick story, add new filter

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-filters/scenario-filters.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-filters/scenario-filters.component.html
@@ -47,6 +47,16 @@
           <span class="initial-capitalize">{{ tag }}</span>
         </nb-option>
       </nb-select>
+
+      <nb-checkbox
+        class="lineHeight-0"
+        formControlName="enabled"
+        [checked]="enabled.value"
+        [indeterminate]="enabled.value === null"
+        (checkedChange)="enabledCheckChanged()"
+      >
+        Tick story active
+      </nb-checkbox>
     </form>
   </nb-card-body>
 </nb-card>
