--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.scss
@@ -32,6 +32,7 @@
     position: relative;
     z-index: 10;
     overflow: hidden;
+    height: inherit;
 
     .contexts-panel {
       position: absolute;
