--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
@@ -1,26 +1,43 @@
 @import '~@nebular/theme/styles/global/_breakpoints.scss';
 
-section {
-  --panel-padding-top: 2.25rem;
+:host {
+  --layout-side-margin: -2.25rem;
+  --layout-bottom-margin: -0.75rem;
+  --layout-padding-top: 2.25rem;
   --navbar-height: 4.75rem;
   --margin-height: 0.75rem;
-  height: calc(100vh - var(--panel-padding-top) - var(--navbar-height) - var(--margin-height));
-  display: flex;
-  flex-direction: column;
-  &[data-fullscreen='true'] > scenario-conception,
-  &[data-fullscreen='true'] > scenario-production {
-    margin: 0 -1rem -1rem;
-  }
 }
 
 @include media-breakpoint-down(md) {
-  section {
-    --panel-padding-top: 1.25rem;
+  :host {
+    --layout-padding-top: 1.25rem;
+    --layout-side-margin: -1.5rem;
+    --layout-bottom-margin: -0.5rem;
   }
 }
 
 @include media-breakpoint-down(sm) {
-  section {
-    --panel-padding-top: 0.25rem;
+  :host {
+    --layout-padding-top: 0.25rem;
+    --layout-side-margin: -1rem;
+    --layout-bottom-margin: -0rem;
+  }
+}
+
+section {
+  height: calc(100vh - var(--layout-padding-top) - var(--navbar-height) - var(--margin-height));
+  display: flex;
+  flex-direction: column;
+
+  scenario-conception,
+  scenario-production {
+    overflow: hidden;
+    margin: 0 var(--layout-side-margin) var(--layout-bottom-margin);
+    height: 100%;
+  }
+
+  &[data-fullscreen='true'] > scenario-conception,
+  &[data-fullscreen='true'] > scenario-production {
+    margin: 0 -1rem -1rem;
   }
 }
