--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
@@ -1,5 +1,5 @@
 <nb-icon
-  *ngIf="intent.primary"
+  *ngIf="intent?.primary"
   icon="award-outline"
   class="valign-middle mr-1"
   style="margin-left: -5px; width: 1.3em"
