--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.scss
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns: minmax(5rem, 80vw);
 
-    > :nth-child(4) {
+    > :nth-child(5) {
       display: none;
     }
 
@@ -27,17 +27,17 @@
     form {
       grid-template-columns: minmax(5rem, 20rem) auto minmax(5rem, 20rem);
       column-gap: 0.5rem;
-      grid-template-rows: auto auto auto;
+      grid-template-rows: auto auto auto auto;
       grid-auto-flow: column;
 
-      > :nth-child(4) {
+      > :nth-child(5) {
         display: block;
         grid-row-start: 2;
         align-self: center;
       }
 
-      > :nth-child(5) {
-        grid-row-start: 1;
+      > :nth-child(6) {
+        grid-row-start: 2;
       }
 
       .contexts-list {
