--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.scss
@@ -7,18 +7,26 @@
     border: 2px solid nb-theme(color-basic-700);
     min-width: 10rem;
     width: fit-content;
-
     margin-top: 20px;
     border-radius: 0.25rem;
 
     .stateGroup-header {
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      gap: 1rem;
       color: nb-theme(text-control-color);
       background-color: nb-theme(color-basic-700);
       padding: 0.3rem 0.7rem;
       margin: -1px;
+
+      > span,
+      > div {
+        display: flex;
+        gap: 0.25rem;
+      }
     }
+
     .stateGroup-body {
       min-height: 3rem;
       .transitions-wrapper {
