--- a/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
+++ b/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
@@ -8,7 +8,7 @@
       nbButton
       shape="round"
       nbTooltip="Close"
-      (click)="dialogRef.close()"
+      (click)="dialogRef.close('cancel')"
     >
       <nb-icon icon="close-outline"></nb-icon>
     </button>
